Auto-origin added to update keyframes' values

--- a/examples/Markers.html
+++ b/examples/Markers.html
@@ -113,7 +113,7 @@
         timeline.addMarker( new Marker("Out",  1.5, "") );
         
         timeline.add( box, 'opacity', 1, 1, 0.0 ); // in
-        timeline.add( box, 'opacity', 0, 1, 1.5, 0.25, 0.25, 0.75, 0.75, undefined, undefined, 1 ); // out
+        timeline.add( box, 'opacity', 0, 1, 1.5 ); // out
         timeline.restart();
         timeline.play();
         
