--- a/examples/Tween.html
+++ b/examples/Tween.html
@@ -80,8 +80,8 @@
         timeline = new Timeline();
         timeline.duration = 3;
         // timeline.playMode = PlayMode.ONCE;
-        // timeline.playMode = PlayMode.LOOP;
-        timeline.playMode = PlayMode.PING_PONG;
+        timeline.playMode = PlayMode.LOOP;
+        // timeline.playMode = PlayMode.PING_PONG;
         timeline.onUpdate = onUpdate;
         timeline.setTime( 1 );
         
