Updated src path

--- a/examples/Tween.html
+++ b/examples/Tween.html
@@ -25,11 +25,11 @@
     
     <!-- Scripts -->
     <script type="text/javascript" src="./DOMExtend.js"></script>
-    <script type="text/javascript" src="../src/Bezier.js"></script>
-    <script type="text/javascript" src="../src/Keyframe.js"></script>
-    <script type="text/javascript" src="../src/Marker.js"></script>
-    <script type="text/javascript" src="../src/Timeline.js"></script>
-    <script type="text/javascript" src="../src/Timer.js"></script>
+    <script type="text/javascript" src="../Bezier.js"></script>
+    <script type="text/javascript" src="../Keyframe.js"></script>
+    <script type="text/javascript" src="../Marker.js"></script>
+    <script type="text/javascript" src="../Timeline.js"></script>
+    <script type="text/javascript" src="../Timer.js"></script>
   </head>
   <body>
     <div id="overlay"></div>
